<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".ui.SignUpActivity">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtareyouTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/signup_title"
            android:textColor="@color/white"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/radioGroup"
            app:layout_constraintStart_toStartOf="@+id/radioGroup"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtareyouTitle">


            <RadioButton
                android:id="@+id/rdBtnSeller"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white"
                android:paddingRight="@dimen/_15sdp"
                android:text="@string/rd_btn_txt1"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_20sdp"
                android:text="@string/txt_or"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rdBtnCustomer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white"
                android:text="@string/rd_btn_txt2"
                android:textColor="@color/white" />
        </RadioGroup>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgUser"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/default_user"
            app:civ_border_color="#FFF"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/imgUser"
            app:layout_constraintEnd_toEndOf="@+id/imgUser"
            app:layout_constraintTop_toTopOf="@+id/imgUser"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/baseline_camera_alt_24" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_10sdp"
            android:text="@string/txt_name_des"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/etName"
            app:layout_constraintStart_toStartOf="@+id/etName" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:background="@drawable/inputboxtext"
            android:ems="10"
            android:hint="@string/name_hint"
            android:inputType="textPersonName"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="25dp"
            android:paddingBottom="10dp"
            android:text=""
            android:textColor="@color/white"
            android:textColorHint="@color/editTextHintColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgUser" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_10sdp"
            android:text="@string/txt_city_des"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/etCity"
            app:layout_constraintStart_toStartOf="@+id/etCity" />

        <EditText
            android:id="@+id/etCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/inputboxtext"
            android:ems="10"
            android:hint="@string/txt_city_des"
            android:inputType="textPersonName"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="25dp"
            android:paddingBottom="10dp"
            android:text=""
            android:textColor="@color/white"
            android:textColorHint="@color/editTextHintColor"
            app:layout_constraintEnd_toEndOf="@+id/etName"
            app:layout_constraintStart_toStartOf="@+id/etName"
            app:layout_constraintTop_toBottomOf="@+id/etName" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_10sdp"
            android:text="@string/enter_address_hint"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/etAddress"
            app:layout_constraintStart_toStartOf="@+id/etAddress" />


        <EditText
            android:id="@+id/etAddress"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="40dp"
            android:background="@drawable/inputboxtext"
            android:ems="10"
            android:hint="@string/enter_address_hint"
            android:inputType="textPersonName"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="25dp"
            android:paddingBottom="10dp"
            android:text=""
            android:textColor="@color/white"
            android:textColorHint="@color/editTextHintColor"
            app:layout_constraintEnd_toEndOf="@+id/etCity"
            app:layout_constraintStart_toStartOf="@+id/etCity"
            app:layout_constraintTop_toBottomOf="@+id/etCity" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignUpSubmit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:visibility="visible"
            android:background="@drawable/btnbackground"
            android:text="@string/btn_submit_txt"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="@+id/etAddress"
            app:layout_constraintStart_toStartOf="@+id/etAddress"
            app:layout_constraintTop_toBottomOf="@+id/etAddress" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="64dp"
            app:layout_constraintEnd_toEndOf="@+id/etAddress"
            app:layout_constraintStart_toStartOf="@+id/etAddress"
            app:layout_constraintTop_toBottomOf="@+id/etAddress" />



    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>