<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:fitsSystemWindows="true"
        tools:context=".ui.LoginActivity">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/login_page_title"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/txtMobileTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/txt_mobile_number"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/etMobileNumber"
            app:layout_constraintStart_toStartOf="@+id/etMobileNumber" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etMobileNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="132dp"
            android:background="@drawable/inputboxtext"
            android:ems="10"
            android:hint="@string/txt_mobile_number"
            android:inputType="phone"
            android:maxLength="10"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="25dp"
            android:paddingBottom="10dp"
            android:text="9725170454"
            android:textColor="@color/white"
            android:textColorHint="@color/editTextHintColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubmit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/btnbackground"
            android:text="@string/btn_submit_txt"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@+id/etMobileNumber"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/etMobileNumber"
            app:layout_constraintTop_toBottomOf="@+id/etMobileNumber" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/etMobileNumber"
            app:layout_constraintStart_toStartOf="@+id/etMobileNumber"
            app:layout_constraintTop_toBottomOf="@+id/etMobileNumber" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>