<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/otp_dialog_design"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txtOtpVerificationTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_28sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:text="@string/dialog_title"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/title_des"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintStart_toStartOf="@+id/txtOtpVerificationTitle"
                app:layout_constraintTop_toBottomOf="@+id/txtOtpVerificationTitle" />

            <TextView
                android:id="@+id/txtMbNuberDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text=""
                android:textColor="#FFFFFF"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />


            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linearLayoutCompat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.506"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtMbNuberDialog">

                <EditText
                    android:id="@+id/etC1"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginEnd="3dp"
                    android:background="@drawable/drawable_otp_box"
                    android:gravity="center"
                    android:inputType="phone"
                    android:maxLength="1"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etC2"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginEnd="3dp"
                    android:background="@drawable/drawable_otp_box"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="phone"
                    android:maxLength="1"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etC3"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginEnd="3dp"
                    android:background="@drawable/drawable_otp_box"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="phone"
                    android:maxLength="1"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etC4"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginEnd="3dp"
                    android:background="@drawable/drawable_otp_box"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="phone"
                    android:maxLength="1"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etC5"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginEnd="3dp"
                    android:background="@drawable/drawable_otp_box"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="phone"
                    android:maxLength="1"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etC6"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@drawable/drawable_otp_box"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="phone"
                    android:maxLength="1"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:id="@+id/txtResend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/Resend_txt"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toStartOf="@+id/txtMbNuberDialog"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat" />


            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/lLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtResend"
                app:layout_constraintVertical_bias="1.0"
               >

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSubmitInDialog1"
                    android:layout_width="@dimen/_125sdp"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="32dp"
                    android:background="@drawable/btnbackground"
                    android:text="@string/btn_submit_txt"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                 />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnCancel"
                    android:layout_width="@dimen/_125sdp"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:layout_marginBottom="32dp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:background="@drawable/btncancelbackground"
                    android:text="@string/btn_cancel_txt"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    />
            </androidx.appcompat.widget.LinearLayoutCompat>



            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtResend" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>